--- a/boostrap_proj_01/03_Explore_Section_Area/01_start/css/style.css
+++ b/boostrap_proj_01/03_Explore_Section_Area/01_start/css/style.css
@@ -28,3 +28,9 @@ body {
     padding: 4px;
     border-radius: 5px;
     font-size: 30px; }
+  #explore-section .fa, #share-section .fa {
+    background: #333;
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+  }
